# nolanlab-ephys

./: .gitignore  M5D4MMin2026-04-30_11-04-56.sh  README.md  all_filepaths.csv  get_filename.sh  main.py  pyproject.toml
nolanlab-ephys/: utils.py
nolanlab_ephys/: utils.py
scripts/: common_paths.py  compute_all_extensions.py  compute_locations_and_pcs.py  copy_to_comp.py  get_all_rec_names.py  locations.py  redo_sparsity_eddie.py  sort_from_filepaths.py  sort_on_comp.py  sort_on_eddie.py  stagein_analyzer.py  stagein_files.py  stageout_locations.py
scripts/bri/: common_paths.py  sort_on_comp.py  sort_on_eddie.py
scripts/bri/resources/: all_mouseday_ephys_paths.csv
scripts/chris/: sort_ibl_data.py  sort_on_eddie.py
scripts/harry/: common_paths.py  copy_to_comp.py  harry_filepaths.csv  locations.py  redo_sparsity_eddie.py  sort_on_comp.py  sort_on_eddie.py  split_analyzers_into_sessions_comp.py  split_analyzers_into_sessions_eddie.py  stagein_analyzer.py  stageout_locations.py
scripts/harry/one_off_recompute/: compute_all_extensions.py  split_analyzers_into_sessions_comp.py  split_analyzers_into_sessions_eddie.py
scripts/harry/resources/: all_rec_samples_of_vr_of.csv
scripts/junji/: common_paths.py  make_mouseday_list.py  play_with_data.ipynb  sort_on_comp.py  sort_on_eddie.py
scripts/junji/resources/: all_mouseday_ephys_paths.csv  mouseday.txt
scripts/template/: make_quality_plots.py  sort_on_comp.py  sort_on_eddie.py
scripts/template/resources/: ephys_filepaths.csv
scripts/teris/: common_paths.py  make_mouseday_list.py  sort_on_comp.py  sort_on_eddie.py
scripts/teris/resources/: all_mouseday_ephys_paths.csv  mousedays.txt
scripts/wolf/: all_filepaths.csv  common_paths.py  get_all_paths.py  make_folders_on_datastore.py  make_simple_probe_plots.py  quality_control.py  sort_on_comp.py  sort_on_eddie.py  stagein_files.py  wolf_filepaths.csv
scripts/wolf/test_data/: plot_test_data.py  sort_test_data.py  (+1 more)
src/nolanlab_ephys/: common_paths.py  eddie.py  lab_utils.py  np_quality_control.py  probe_info.py  si_protocols.py  sort.py  spikeinterface_tools.py  utils.py
