[project]
name = "nolanlab_ephys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "ipykernel>=6.29.5",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.7",
    "matplotlib",
    "numpy",
    "pandas>=2.2.3",
    "pynapple>=0.10.1",
    "scipy",
    "spikeinterface",
]


[build-system]
requires = ["setuptools>=78.0.2"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
nolanlab-ephys = { workspace = true }

[dependency-groups]
dev = [
    "nolanlab-ephys",
]
