[project]
name = "nolanlab_ephys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "eddie-helper",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.7",
    "kilosort==4.1.1",
    "matplotlib",
    "numpy",
    "pandas>=2.2.3",
    "scipy",
    "spikeinterface",
]


[build-system]
requires = ["setuptools>=78.0.2"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
nolanlab-ephys = { workspace = true }
eddie-helper = { git = "https://github.com/chrishalcrow/eddie_helper.git" }

[dependency-groups]
dev = [
    "nolanlab-ephys",
]
