[project]
name = "nolanlab_ephys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "eddie-helper",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.8",
    "ipywidgets>=8.1.7",
    "kilosort==4.1.7",
    "matplotlib",
    "numba>=0.62.1",
    "numpy",
    "pandas>=2.2.3",
    "pytest>=9.0.3",
    "scipy",
    "skops>=0.13.0",
    "spikeinterface",
]


[build-system]
requires = ["setuptools>=78.0.2"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
nolanlab-ephys = { workspace = true }
eddie-helper = { git = "https://github.com/chrishalcrow/eddie_helper.git" }
spikeinterface = { git = "https://github.com/SpikeInterface/spikeinterface.git" }

[dependency-groups]
dev = [
    "nolanlab-ephys",
    "ruff>=0.15.9",
]

[tool.ruff]
# Set the maximum line length to 100
line-length = 100
